[package]
name = "get"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.16", features = ["stream"] }
tokio = {verison="*", features = ["full"]}
trauma = "2.2.2"
clap = { version = "4.2.5", features = ["cargo", "wrap_help", "color", "unstable-styles"] }
anstyle = "1.0.0"
comfy-table = "6.1.4"
owo-colors = "3.5.0"
flate2 = "1.0.26"
self_update = "0.36.0"
